--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,11 @@ torchvision = "*"
 opencv-contrib-python = "*"
 
 [dev-packages]
+black = "*"
+flake8 = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
